--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -33,17 +33,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: npm
-          cache-dependency-path: frontend/package.json
-      - name: Install
-        working-directory: frontend
-        run: npm ci
-      - name: Build
-        working-directory: frontend
-        run: npm run build
+      - name: Build (node:20-alpine)
+        run: |
+          docker run --rm \
+            -v "${{ github.workspace }}:/w" -w /w \
+            node:20-alpine sh -lc 'cd frontend && npm ci && npm run build'
 
   docker-build:
     runs-on: ubuntu-latest
